# news-research

./: .dockerignore  .env.example  .gitignore  README.md  clean-local.ps1  dev-backend.ps1  dev-db.ps1  dev-frontend.ps1  docker-compose.yml  dropped_yahoo_entries.json  rss_probe_report.json  snapshot.txt  websub_results.json
backend/: Dockerfile  alembic.ini  entrypoint.sh  migrate.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260319_0001_baseline_schema.py  (+1 more)
backend/app/: article_filters.py  article_ingest.py  article_maintenance.py  config.py  constants.py  database.py  deps.py  feed_runtime.py  http_client.py  ingestion.py  main.py  models.py  monitoring.py  pg_utils.py  push_alerts.py  query_utils.py  raw_feed_items.py  runtime.py  scheduler.py  schemas.py  sources.py  sse.py  ticker_context.py  ticker_extraction.py  ticker_loader.py  utils.py  vapid_keygen.py
backend/tests/: conftest.py  helpers.py  test_admin_workflows.py  test_article_maintenance_dedupe_revalidate.py  test_article_maintenance_remap.py  test_config_settings.py  test_database_init.py  test_feed_runtime_resilience.py  test_http_client.py  test_ingest_concurrency.py  test_ingestion_feed_resilience.py  test_ingestion_maintenance.py  test_ingestion_resilience.py  test_ingestion_runtime_sync.py  test_postgres_ci.py  test_push_alerts.py  test_security_and_news_flow.py  test_source_enablement.py  test_sse.py  test_ticker_extraction.py  test_ticker_fallbacks.py  test_ticker_matching.py  test_ticker_pagination.py  test_ticker_validation.py  test_utils.py
(+59 files in other folders)
